# fine-tune-llm

./: .gitignore  Makefile  README.md  pyproject.toml
metrics/: eval_loss_runs_Jan25_11-37-37_precision3680.csv  train_entropy_runs_Jan25_11-37-37_precision3680.csv  train_loss_runs_Jan25_11-37-37_precision3680.csv
notebooks/: 01_GEMMA2B_QUICK_INFERENCE.ipynb  02_GEMMA2B_FINE_TUNING.ipynb  03_GEMMA2B_MERGE_LORA.ipynb  04_GEMMA2B_GGUF.ipynb
