[project]
name = "fine-tune-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Ederson Corbari",email = "e@NeuroQuest.ai"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "peft (>=0.18.1,<0.19.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "huggingface-hub (>=1.3.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"
pytest = "^9.0.2"
ipykernel = "^7.1.0"
jupyter = "^1.1.1"
nbconvert = "^7.16.6"

